--- a/organizacoes/templates/organizacoes/organizacoes_projetos.html
+++ b/organizacoes/templates/organizacoes/organizacoes_projetos.html
@@ -76,7 +76,7 @@
               {% lng "Último<br>Contato" "Last<br>Contact" %}
             </small></th>
             <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(4)')">
-              {% lng "Anotação" "Notes" %}
+              {% lng "Anotações" "Notes" %}
             </th>
             <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(5)', 'n')" width="81em">
               <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem">
@@ -89,71 +89,27 @@
         </thead>
 
         <tbody>
-          {% for organizacao,projetos,contato in organizacoes_list %} 
-            <tr id="tr{{organizacao.id}}" class="item" 
-              {% if contato %}
-                style="background-color:#{{contato.tipo_retorno.cor}};"
-                data-type="{{contato.tipo_retorno.id}}"
+          {% for organizacao, projetos, anotacoes in organizacoes_list %} 
+            <tr id="tr{{organizacao.id}}" class="item 
+            {% comment %} acompanhamentos {% endcomment %}
+             {% for a in anotacoes %} anot_{{a.tipo_retorno.id}}{% endfor %}"
+              {% if anotacoes %}
+                {% comment %} style="background-color:#{{anotacoes.first.tipo_retorno.cor}};" {% endcomment %}
+                {% comment %} data-type="{{anotacoes.first.tipo_retorno.id}}" {% endcomment %}
               {% endif %}>
               <td style="text-align: center; font-size: 12px;"></td>
 
               <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=organizacao %}</td>
 
               <td id="data{{organizacao.id}}">
-                {% if not contato %}
+                {% if not anotacoes %}
                   --------
                 {% else %}
-                  {{contato.momento|date:"d/m/y"}}
+                  {{anotacoes.first.momento|date:"d/m/y"}}
                 {% endif %}
               </td>
 
-              {% comment %} Anotação {% endcomment %}
-              <td>
-                {% if not contato %}
-                  <div style="float:left;width: 92%;">
-                    <span id="contato_autor{{organizacao.id}}">
-                      ---:
-                    </span>
-                    <a id='organizacao{{organizacao.id}}'
-                      data-confirmar="true"
-                      class="open-modal imprimir"
-                      >---------</a
-                    >
-                  </div>
-                  <div class="esconder" style="float:right;">
-                    {% if organizacao %}
-                      <a style="font-size: 0.5em; vertical-align: super;"
-                         class="open-modal"
-                         href="{% url 'anotacao' organizacao.id %}"
-                         data-url="{% url 'anotacao' organizacao.id %}"
-                        >&#10133;</a
-                      >
-                    {% else %}
-                      <small>{% lng "ERRO" "ERROR" %}</small>
-                    {% endif %}
-                  </div>
-                {% else %}
-                  {% comment %} {{contato.texto}} {% endcomment %}
-                    <div style="float:left;width: 92%;">
-                      <span id="contato_autor{{organizacao.id}}">{{contato.autor.first_name}}:</span>
-                      <a id='organizacao{{organizacao.id}}'
-                         class="open-modal imprimir"
-                         href="{% url 'anotacao' organizacao.id contato.id %}"
-                         data-url="{% url 'anotacao' organizacao.id contato.id %}"
-                         data-confirmar="true"
-                        >{{contato.texto}}</a
-                      >
-                    </div>
-                    <div class="esconder" style="float:right;">
-                      <a style="font-size: 0.5em; vertical-align: super;"
-                         class="open-modal"
-                         href="{% url 'anotacao' organizacao.id %}"
-                         data-url="{% url 'anotacao' organizacao.id %}"
-                        >&#10133;</a
-                      >
-                    </div>
-                {% endif %}
-              </td>
+              <td class="anotacoes">{% include "operacional/includes/bloco_anotacoes_contato.html" %}</td>
 
               {% comment %} Projetos {% endcomment %}
               <td class="text-center">
@@ -170,6 +126,9 @@
             </tr>
           {% endfor %}
         </tbody>
+        <caption>
+          {% lng "Mostrando últimos 6 meses de anotações" "Showing last 6 months of notes" %}
+        </caption>
       </table>
 
     </div>
@@ -179,71 +138,37 @@
     </div>
 
     <div class="flex-container">
-      <div class="flex-item">
-        <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
-          <div class="mb-2">
-            <b>{% lng "Organizações em tratativas" "Organizations in negotiations" %}:</b> {{organizacoes|length}}<br>
-          </div>
-          {% for tipo in tipo_retorno %}
-            <div class="d-flex align-items-start">
-              <span data-type="{{tipo.id}}" data-color="#{{tipo.cor}}" data-hide="false" class="show-hide mr-2"
-              style="line-height: 1.2; background-color: #{{tipo.cor}};">&nbsp;&nbsp;&nbsp;</span>
-              <span class="text-truncate">{{tipo.nome}}</span>
-              <span id="retorno{{tipo.id}}" class="calc_aux ml-2"></span>
-            </div>
-          {% endfor %}
-        </div>
-        <script>
-
-          $(".show-hide").click(function() {
-            
-            click = $(this);
-            var filterValue = click.attr("data-type");
-
-            var row = $(".item");
-            
-            row.each(function(i, el) {
-              if( (filterValue > 6) & ($(el).attr("data-type") > 6) ) {
-                if(click.attr("data-hide") === "false") {
-                  $(el).hide();
-                } else {
-                  $(el).show();
-                }
-              } else {
-                if( filterValue == $(el).attr("data-type") ) {
-                  if(click.attr("data-hide") === "false") {
-                    $(el).hide();
-                  } else {
-                    $(el).show();
-                  }
-                }
-              }
-            });
-
-            if(click.attr("data-hide") === "false") {
-              click.attr("data-hide", "true");
-              click.css({background: "linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%)"});
-            } else {
-              click.attr("data-hide", "false");
-              click.css({background: click.attr("data-color") });
-            }
-
-          });
-
-          function atualiza_situacoes() {
-            $(".calc_aux").css({fontWeight: "bold", color: "darkred"});
-            {% for tipo in tipo_retorno %}
-              var count = $(".item[data-type='{{tipo.id}}']").length;
-              if (count > 0) {
-                document.getElementById("retorno{{tipo.id}}").innerHTML = "(" + count + ")";
-              }
-            {% endfor %}
-          }
-          atualiza_situacoes();
-
-        </script>
-      </div>
+      {% include "operacional/includes/tabela_organizacoes_contactadas.html" %}
     </div>
+
+    <script>
+
+      {% include "operacional/includes/filtra_acompanhamento_show_hide.html" %}
+
+      function atualiza_situacoes() {
+        $(".calc_aux").css({fontWeight: "bold", color: "darkred"});
+        {% for tipo in tipo_retorno %}
+          var filtered = $(".anotacoes div.mostra_anot");
+          var count = 0;
+          for(var i = 0; i < filtered.length; i++) {
+            for(var j = 0; j < filtered[i].children.length; j++) {
+              var el = filtered[i].children[j];
+              if ($(el).hasClass("visible")) {
+                if ($(el).attr("data-type") == "{{tipo.id}}") count++;
+                break;
+              }
+            }
+          }
+          if (count > 0) {
+            document.getElementById("retorno{{tipo.id}}").innerHTML = "(" + count + ")";
+          } else {
+            document.getElementById("retorno{{tipo.id}}").innerHTML = "";
+          }
+        {% endfor %}
+      }
+      atualiza_situacoes();
+
+    </script>
 
   </div>
 
@@ -255,46 +180,16 @@
       });
     }
 
-    function filtra_data() {
-      var filterValue = $("#filterAcompanhamento").val();
-      var row = $(".item"); 
-      row.hide();
-      var tipoRetornoMapping = {
-        {% for g in GRUPO_DE_RETORNO %}
-          "{{ g.1 }}": [
-            {% for tipo in tipo_retorno %}{% if tipo.grupo_de_retorno ==  g.0 %}
-              "{{ tipo.id }}"{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}
-          ]{% if not forloop.last %}, {% endif %}
-        {% endfor %}
-      };
-      row.each(function(i, el) {
-        if( filterValue == "todas" || filterValue == $(el).attr("data-type") ) {
-            $(el).show();
-        }
-        else if (filterValue in tipoRetornoMapping) {
-          var tipoIds = tipoRetornoMapping[filterValue];
-          $(".item").each(function() {
-              if (tipoIds.includes($(this).attr("data-type"))) {
-                  $(this).show();
-              }
-          });
-        }
-      });
-    }
-
-    $("#filterAcompanhamento").change(function() {
-      filtra_data();
-      atualiza_situacoes();
-    });
+    {% include "operacional/includes/filtra_acompanhamento.html" %}
 
     function carrega_pagina() {
       numberRows();
+      filtra_data();
+      atualiza_situacoes();
     }
     
     $(document).ready(function(){
-      numberRows();
-      filtra_data();
-      atualiza_situacoes();
+      carrega_pagina();
     });
 
   </script>
