tabelas de anotações mais dinâmicas

--- a/operacional/templates/operacional/includes/filtra_acompanhamento.html
+++ b/operacional/templates/operacional/includes/filtra_acompanhamento.html
@@ -54,4 +54,11 @@ function filtra_data() {
 $("#filterAcompanhamento").change(function(){
   filtra_data();
   atualiza_situacoes();
+  esconde_orgs();
 });  
+
+function numberRows() {
+  $("#OrganizacoesTable tbody tr").each(function(index) {
+    $(this).find("td:first").text(index + 1);
+  });
+}
