--- a/operacional/templates/operacional/includes/grafico_previsao_propostas.html
+++ b/operacional/templates/operacional/includes/grafico_previsao_propostas.html
@@ -20,7 +20,6 @@
 
   var datasets = [
     {
-      {% comment %} label: "Confirmados", {% endcomment %}
       label_pt: "Confirmados",
       label_en: "Confirmed",
       organizacoes: orgs_confirmadas,
@@ -33,7 +32,6 @@
       categoryPercentage: 0.4
     },
     {
-      {% comment %} label: "Interessados", {% endcomment %}
       label_pt: "Interessados",
       label_en: "Interested",
       organizacoes: orgs_interessados,
@@ -81,7 +79,6 @@
         display: true,
         text_pt: "Previsão de Propostas por Curso",
         text_en: "Proposal Forecast by Course",
-        {% comment %} text: null, {% endcomment %}
         position: "top"
     },
     legend: {
@@ -104,7 +101,6 @@
         ticks: {beginAtZero: true},
         scaleLabel: {
           display: true,
-          {% comment %} labelString: "propostas", {% endcomment %}
           labelString_pt: "propostas",
           labelString_en: "proposals"
         }
@@ -138,6 +134,7 @@
   });
 
   function lingua_grafico() {
+    if(window.myBarChart == undefined) {return;}
     if(localStorage.getItem("lingua") == "pt") {
       window.myBarChart.options.title.text = window.myBarChart.options.title.text_pt;
       window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString = window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString_pt;
